[package]
name = "sse_pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
hyper = {version = "1.0.0-rc.1", features = ["full"]}
tokio = {version = "1.21.2", features = ["full"]}