[package]
name = "sse_pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
hyper = {version = "1.0.0-rc.1", features = ["full"]}
tokio = {version = "1.21.2", features = ["full"]}
futures = "0.3.25"
bytes = "1.2.1"
http-body-util = "0.1.0-rc.1"
serde_json = "1.0.87"
pretty_env_logger = "0.4.0"